# PyWEB_homework_mod_7

./: README.md  config.ini  main.py  my_select.py  pyproject.toml  seeds.py
alembic/versions/: cad7a25101fd_init.py
